2006-02-27  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* MatrixElement/MEQCD2to2 (Repository): QCD 2-to-2 matrix elements added

2006-02-22  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Finished the removal of the VectorMesonDecayerBase and TensorMesonDecayerBase
	classes

2006-02-22  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Base class changed in a number of Vector decayers in preparation for the 
	removal of the VectorMesonDecayerBase class.

2006-02-21  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* changes to fix change conservation problems from branch merge
	  and change base class of TensorMeson2MesonDecayer.

2006-02-21  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* changes to include the matrix element for gamma+jet 

2006-02-16  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* src/HerwigDefaults.in: New handling of cuts in ThePEG

2006-02-07  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* configure.ac, README, AUTHORS: Last updates, tagged and
	published as Herwig++-2.0-beta release. Merged release branch into
	main up until tag herwig-2-0-beta
	
2006-02-03  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* MatrixElement/MEqq2W2ll.cc: Bugfix for unititialized
	variable. Solves imbalance between W+ and W-.

2006-02-02  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* Shower/ShowerHandler.cc, Hadronization/PartonSplitter.cc: Added
	eventerror for spacelike gluons in PartonSplitter. Added check for
	QCD-FSR when doing ME corrections.

2006-02-01  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* all: Branched off herwig-2-0-beta-release branch, then merged
	Decay Radiation branch. Structural changes to decayers. 

	* Utilities/Math.cc, Decay/Perturbative/SMTopDecayer.h,
	SMHiggsGGHiggsPPDecayer.h, SMHiggsFermionsDecayer.h: Temporary
	fixes to allow compilation.


2006-01-31  David Grellscheid  <David.Grellscheid@durham.ac.uk>
