@@ -1,5 +1,10 @@
 2006-02-27  Peter Richardson  <Peter.Richardson@durham.ac.uk>
 
+	* MatrixElement/MEPP2GammaJet.h (Repository): spin correlation code added to
+		gamma+jets ME
+
+2006-02-27  Peter Richardson  <Peter.Richardson@durham.ac.uk>
+
 	* MatrixElement/MEQCD2to2 (Repository): QCD 2-to-2 matrix elements added
 
 2006-02-22  Peter Richardson  <Peter.Richardson@durham.ac.uk>
